<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/bcolor">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="123dp"
            android:layout_height="30dp"

            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/settings_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_column="4"
            android:layout_gravity="center"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0"
            android:background="@drawable/icon" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/profpolz"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/strelka"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </TableRow>
    <TableRow
        android:onClick="calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="-40dp"
            android:background="@color/bcolor"
            android:fontFamily="@font/roboto"
            android:onClick="calendar"
            android:text="@string/dataivrema"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/strelka"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="calendar"
            android:background="@color/bcolor"
            />

    </TableRow>
    \

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/soundsnastoy"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"

            />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="-10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/strelka"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/checkobnov"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/strelka"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

    </TableRow>



</TableLayout>